# jarvis-mini-server

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
scripts/: tesla_oauth.py  tesla_register_partner.py
tools/: __init__.py  _result.py  get_time.py  grocery.py  spotify.py  tesla.py
